# ray-tracing

./: .gitignore  Makefile.am  configure  configure.ac
src/: bitmap.h  frameworkstuff.h  merge.cpp  rt.cpp
src/tracing/: camera.cpp  camera.h  light.cpp  light.h  lowlevel.cpp  lowlevel.h  scene.cpp  scene.h
src/tracing/objects/: object.h  sphere.cpp  sphere.h
