AUTOMAKE_OPTIONS = subdir-objects

bin_PROGRAMS = rt
rt_SOURCES =  src/tracing/lowlevel.cpp \
              src/tracing/lowlevel.h \
              src/tracing/camera.h \
              src/tracing/camera.cpp \
              src/tracing/scene.h \
              src/tracing/scene.cpp \
              src/tracing/light.h \
              src/tracing/light.cpp \
              src/tracing/objects/object.h \
              src/tracing/objects/sphere.h \
              src/tracing/objects/sphere.cpp \
              src/rt.cpp \
              src/bitmap.h \
              src/frameworkstuff.h
